I think this might be an appropriate ending.

--- a/index.html
+++ b/index.html
@@ -222,6 +222,12 @@
       <section data-background="http://media.giphy.com/media/yLWuzyLdZGUHm/giphy.gif">
         <h1>Spørsmål?</h1>
       </section>
+      <section data-background="http://media.giphy.com/media/11m0KYbHLWfFQY/giphy.gif">
+        <h2>Takk for meg</h2>
+        <p>
+          <a href="http://eiriksm.github.io/cupidom-dcoslo2014">Slides: http://eiriksm.github.io/cupidom-dcoslo2014</a>
+        </p>
+      </section>
     </div>
   </div>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/reveal.js/2.6.2/lib/js/head.min.js"></script>
