--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <h1>Responsiv design</h1>
           <ul>
             <li>Mulig gjenbruk av nåværende theme</li>
-            <li>Veldig mange elementer på mange sider som er for meget for en mobil</li>
+            <li>Mange av sidene har "desktop"-markup</li>
             <li>Man må bootstrappe Drupal med alle modulene</li>
             <li>Mest fordelaktig om man går "all-in".</li>
             <li>Redesign av web-versjonen var ikke i planene.</li>
@@ -217,7 +217,7 @@
       </section>
       <section>
         <h1>Andre positive effekter?</h1>
-        <p>Potensielt enklere å forholde seg til oppgraderinger (f.eks 6 - 7) ved å ha en “kontrakt” ift til API for backend.</p>
+        <p>Potensielt enklere å forholde seg til oppgraderinger (f.eks 6 - 7) ved å ha en “kontrakt” ift API for backend.</p>
       </section>
       <section data-background="http://media.giphy.com/media/yLWuzyLdZGUHm/giphy.gif">
         <h1>Spørsmål?</h1>
