--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <ul>
           <li>16 000 sessions per dag</li>
           <li>415 000 sidevisninger</li>
-          <li>17 min / 25 sider per session</li>
+          <li>17 min per session</li>
           <li>På det meste 1 melding hvert andre sek.</li>
         </ul>
       </section>
