--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
       <section data-background="//media.giphy.com/media/11m0KYbHLWfFQY/giphy.gif">
         <h2>Takk for meg</h2>
         <p>
-          <a href="//eiriksm.github.io/cupidom-dcoslo2014">Slides: http://eiriksm.github.io/cupidom-dcoslo2014</a>
+          <a href="//eiriksm.github.io/cupidom-dcoslo2014">Slides: https://eiriksm.github.io/cupidom-dcoslo2014</a>
         </p>
       </section>
     </div>
